tests/ui/error-codes/e0119/issue-28981.stderr
error[E0119]: conflicting implementations of trait `Deref` for type `ManuallyDrop<_>`
  --> $DIR/issue-28981.rs:5:1
   |
LL | impl<Foo> Deref for Foo { }
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> Deref for ManuallyDrop<T>
             where T: ?Sized;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
